--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,28 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
+
+
+# ---Important Codes---
+# keytool -list -v -keystore ~/.android/debug.keystore -alias androiddebugkey -storepass android -keypass android
+# cd android ||| ./gradlew signingReport
+# flutter pub run flutter_native_splash:create
+# flutter pub run flutter_launcher_icons:main
+# flutter pub run build_runner clean
+# flutter pub run build_runner build --delete-conflicting-outputs
+# flutter build apk --release
+# flutter build apk --release --verbose --obfuscate --split-debug-info=novus-guard-solo-flutter/symbols
+# flutter build apk --release --no-tree-shake-icons
+# flutter build apk --release --no-tree-shake-icons --verbose --obfuscate --split-debug-info=novus-guard-pro-flutter/symbols
+# flutter build appbundle --release --no-tree-shake-icons --verbose --obfuscate --split-debug-info=novus-guard-pro-flutter/symbols
+# flutter clean
+# dart pub cache clean
+# dart pub cache repair
+# flutter build appbundle --target-platform android-arm,android-arm64,android-x64
+# flutter build apk --target-platform android-arm,android-arm64,android-x64 --split-per-abi
+# flutter build apk --target-platform android-arm,android-arm64,android-x64
+# flutter pub run change_app_package_name:main com.new.package.name
+
 version: 1.0.0+1
 
 environment:
@@ -30,8 +52,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  dio: ^5.6.0
+  retrofit: ^4.2.0
+  shared_preferences: ^2.3.2
+  intl: ^0.19.0
+  flutter_native_splash: ^2.4.1
+  flutter_launcher_icons: ^0.13.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -39,6 +65,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  retrofit_generator: ^8.2.0
+  build_runner: ^2.4.12
+  json_serializable: ^6.8.0
+  json_annotation: ^4.9.0
+  change_app_package_name: ^1.3.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -62,6 +93,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -88,3 +122,16 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/App_Icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+
+flutter_native_splash:
+  color: "#000000"
+  image: assets/App_Icon.png
+  android: true
+  ios: true
+  android_disable_fullscreen: true
