--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   intl: ^0.19.0
   flutter_native_splash: ^2.4.1
   flutter_launcher_icons: ^0.13.1
+  socket_io_client: ^3.0.0-beta.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
