--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,7 +95,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets:
-    - .env
+#    - .env
     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
