--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,6 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
 
-
 # ---Important Codes---
 # keytool -list -v -keystore ~/.android/debug.keystore -alias androiddebugkey -storepass android -keypass android
 # cd android ||| ./gradlew signingReport
@@ -59,6 +58,8 @@ dependencies:
   flutter_native_splash: ^2.4.1
   flutter_launcher_icons: ^0.13.1
   socket_io_client: ^3.0.0-beta.2
+  flutter_easyloading: ^3.0.5
+  fluttertoast: ^8.2.8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
