--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,11 @@ dependencies:
   socket_io_client: ^3.0.0-beta.2
   flutter_easyloading: ^3.0.5
   fluttertoast: ^8.2.8
+  get: ^5.0.0-release-candidate-9.2
+  cached_network_image: ^3.4.1
+  printing: ^5.12.0
+  htmltopdfwidgets: ^1.0.3
+  path_provider: ^2.1.4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
