--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,9 +65,11 @@ dependencies:
   printing: ^5.12.0
   htmltopdfwidgets: ^1.0.3
   path_provider: ^2.1.4
+  pdf: ^3.11.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -75,7 +77,6 @@ dev_dependencies:
   retrofit_generator: ^8.2.0
   build_runner: ^2.4.12
   json_serializable: ^6.8.0
-  json_annotation: ^4.9.0
   change_app_package_name: ^1.3.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
