--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   htmltopdfwidgets: ^1.0.3
   path_provider: ^2.1.4
   pdf: ^3.11.1
+  webview_flutter: ^4.9.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
@@ -104,6 +105,7 @@ flutter:
   assets:
 #    - .env
     - assets/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -134,12 +136,17 @@ flutter:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/App_Icon.png"
+  image_path: "assets/images/logo.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
 
 flutter_native_splash:
   color: "#000000"
-  image: assets/App_Icon.png
+  image: assets/images/logo.png
   android: true
   ios: true
-  android_disable_fullscreen: true
+  #  android_disable_fullscreen: true
+  android_12:
+    image: assets/icons/logo.png
+    icon_background_color: "#000000"
+    image_dark: assets/icons/logo.png
+    icon_background_color_dark: "#000000"
